--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kdixon32.github.io/WOFF_DB",
+  "homepage": "https://kdixon32.github.io/WOFF_DB",
   "name": "woff",
   "version": "0.1.0",
   "private": true,
